fix: corrige comportamento do combobox